--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
 	},
 	"dependencies": {
 		"@element-plus/icons-vue": "^1.0.0",
+		"@interactjs/core": "1.10.14",
+		"@interactjs/utils": "1.10.14",
 		"axios": "^0.26.0",
 		"countup.js": "^2.1.0",
 		"cropperjs": "^1.5.12",
+		"cross-env": "^7.0.3",
 		"echarts": "^5.3.0",
 		"echarts-gl": "^2.0.9",
 		"echarts-wordcloud": "^2.0.0",
@@ -23,16 +26,19 @@
 		"nprogress": "^0.2.0",
 		"print-js": "^1.6.0",
 		"qrcodejs2-fixes": "^0.0.2",
+		"rollup": ">=2.42.0 <3.0.0",
 		"screenfull": "^6.0.1",
 		"sortablejs": "^1.14.0",
 		"splitpanes": "^3.1.1",
+		"vite-plugin-mock": "^2.9.6",
 		"vue": "^3.2.31",
 		"vue-clipboard3": "^1.0.1",
 		"vue-grid-layout": "^3.0.0-beta1",
 		"vue-i18n": "^9.1.9",
 		"vue-router": "^4.0.13",
 		"vuex": "^4.0.2",
-		"wangeditor": "^4.7.12"
+		"wangeditor": "^4.7.12",
+		"webpack": "5.0.0"
 	},
 	"devDependencies": {
 		"@types/node": "^17.0.21",
@@ -45,6 +51,7 @@
 		"dotenv": "^16.0.0",
 		"eslint": "^8.10.0",
 		"eslint-plugin-vue": "^8.5.0",
+		"mockjs": "^1.1.0",
 		"prettier": "^2.5.1",
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
